  [Michele Simionato]
  * Optimized the aggregation by tag
  * Fixed a bug with the binning when disaggregating around the date line
  * Fixed a prefiltering bug with complex fault sources: in some cases, blocks
    ruptures were incorrectly discarded
  * Changed the sampling algorithm for the GMPE logic trees: now it does
    not require building the full tree in memory
  * Raised clear errors for geometry files without quotes or with the wrong
    header in the multi_risk calculator
  * Changed the realizations.csv exporter to export '[FromShakeMap]' instead
    of '[FromFile]' when needed
  * Changed the agg_curves exporter to export all realizations in a single file
    and all statistics in a single file
  * Added rlz_id, rup_id and year to the losses_by_event output for ebrisk
  * Fixed a bug in the ruptures XML exporter: the multiplicity was multiplied
    (incorrectly) by the number of realizations
  * Fixed the pre-header of the CSV outputs to get proper CSV files
  * Replaced the 64 bit event IDs in event based and scenario calculations
    with 32 bit integers, for the happiness of Excel users

  [Daniele Viganò]
  * Numpy 1.16, Scipy 1.3 and h5py 2.9 are now required

  [Michele Simionato]
  * Changed the ebrisk calculator to read the CompositeRiskModel directly
    from the datastore, which means 20x less data transfer for Canada

  [Anirudh Rao]
  * Fixed a bug in the gmf CSV importer: the coordinates were being
    sorted and new site_ids assigned even though the user input sites
    csv file had site_ids defined

  [Michele Simionato]
  * Fixed a bug in the rupture CSV exporter: the boundaries of a GriddedRupture
    were exported with lons and lats inverted
  * Added some metadata to the CSV risk outputs
  * Changed the distribution mechanism in ebrisk to reduce the slow tasks

  [Graeme Weatherill]
  * Updates Kotha et al. (2019) GMPE to July 2019 coefficients
  * Adds subclasses to Kotha et al. (2019) to implement polynomial site